Remove forward slash in the relative path at the beginning

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 <body>
     <h1>Odin Recipes</h1>
     <ul>
-        <li><a href="/pages/mojo-bowls.html">Mojo Bowls</a></li>
-        <li><a href="/pages/rigatoni-with-sausage.html">Rigatoni with Sausage</a></li>
-        <li><a href="/pages/winter-grain-bowl.html">Winter Grain Bowl</a></li>
+        <li><a href="pages/mojo-bowls.html">Mojo Bowls</a></li>
+        <li><a href="pages/rigatoni-with-sausage.html">Rigatoni with Sausage</a></li>
+        <li><a href="pages/winter-grain-bowl.html">Winter Grain Bowl</a></li>
     </ul>
 
 </body>
