--- a/pages/mojo-bowls.html
+++ b/pages/mojo-bowls.html
@@ -9,7 +9,7 @@
 
 <body>
     <h1>Mojo Bowls</h1>
-    <img src="/images/Mojo-Bowls-1-5.jpg" alt="mojo bowls">
+    <img src="images/Mojo-Bowls-1-5.jpg" alt="mojo bowls">
     <h2>Description</h2>
     <p>
         Mojo Bowls are a vibrant, nutrient-packed meal inspired by tropical flavors and wholesome ingredients. Typically
