--- a/pages/rigatoni-with-sausage.html
+++ b/pages/rigatoni-with-sausage.html
@@ -9,7 +9,7 @@
 
 <body>
     <h1>Rigatoni with Sausage</h1>
-    <img src="images/Rigatoni-with-Sausage-1.jpg" alt="rigatoni with sausage">
+    <img src="../images/Rigatoni-with-Sausage-1.jpg" alt="rigatoni with sausage">
     <h2>Description</h2>
     <p>
         Rigatoni with Sausage is a hearty and comforting Italian pasta dish made with tender rigatoni noodles and savory
@@ -48,7 +48,7 @@
         <li>Add the cooked rigatoni to the sauce and toss to coat evenly.</li>
         <li>Serve hot, topped with grated parmesan and chopped fresh basil.</li>
     </ol>
-    <a href="/index.html">Home</a>
+    <a href="../index.html">Home</a>
 </body>
 
 </html>
